--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- a div is divisibe element  -->
       <div class="button hamburger">
-        <img src="img/logogonew.png" alt="logogonew" width="100" height="100">
+        <img src="img/logogonew.png" alt="logogonew" width="170" height="170">
 
       </div>
 
@@ -25,17 +25,20 @@
 
         <div class="sidemenu-bits">
             <h1>hello world!</h1><br><br>
-            <h2>This page created for study purposes by using fullpage.js </h2><br><br><br>
+            <h2>This page created for study purposes by using fullpage.js </h2>
+            <h2>Special thanks to: <a href="www.jlambus.com">J. Lambus</a> for stunning photos.</h2>
+            <h2>Info: <a href="en.wikipedia.org">Wikipedia</a></h2><br><br><br>
+              <h3><a href="yagmursarcin.com">yagmursarcin.com</a></h3>
         </div>
-<div class="icons">
+<!-- <div class="icons">
 
-  <div class="icon2">
+ <div class="icon2">
   <a href=""><i class="fab fa-facebook-f" width="50" height="50" ></i></a></div>
 
              <div class="icon3">
                <a href=""><i class="fab fa-instagram" width="50" height="50" ></i>
                  <a/></div>
-</div>
+</div> -->
 
     </div>
 
@@ -55,21 +58,46 @@
 
 
 
-
+    <div class="section active" id="section-1">
+      <div class="textbox">
+        <h1>Bathypelagic</h1>
+        <div class="text"><h2>The bathyal zone or bathypelagic – from Greek βαθύς (bathýs), deep – (also known as midnight zone) is the part of the pelagic zone that extends from a depth of 1,000 to 4,000 m (3,300 to 13,100 ft) below the ocean surface. It lies between the mesopelagic above, and the abyssopelagic below.</h2></div>
+      </div>
+    </div>
 
 
 
     <div class="section" id="section-2">
         <div class="slide" data-anchor="slide1">
-          <div class="background-logo">
-            <img src="img/dumbo.jpg" alt="yolo" width="350px" >
-          </div>
+          <div class="background-logo">        <div class="deeper">
+            <img src="img/bat-1.jpg" alt="yolo" width="100%" >
+          </div> </div>
         </div>
         <div class="slide" data-anchor="slide2">
-            <div class="background-logo">
-              <img src="img/bio-1.jpg" alt="yolo" width="350px" >
-            </div>
+          <div class="background-logo">        <div class="deeper">
+              <img src="img/bat-2.jpg" alt="yolo" width="100%" >
+            </div> </div>
         </div>
+        <div class="slide" data-anchor="slide3">
+          <div class="background-logo">        <div class="deeper">
+              <img src="img/bat-3.jpg" alt="yolo" width="100%" >
+            </div> </div>
+        </div>
+        <div class="slide" data-anchor="slide4">
+          <div class="background-logo">        <div class="deeper">
+              <img src="img/bat-4.jpg" alt="yolo" width="100%" >
+            </div> </div>
+        </div>
+    </div>
+
+
+
+
+    <div class="section active" id="section-3">
+      <div class="textbox">
+        <h1>abyssopelagic</h1>
+        <div class="text"><h2>"Abyss" derives from the Greek word ἄβυσσος, meaning bottomless. At depths of 3,000 to 6,000 metres (9,800 to 19,700 ft), this zone remains in perpetual darkness. It alone makes up over 83% of the ocean and covers 60% of the Earth. The abyssal zone has temperatures around 2 to 3 °C (36 to 37 °F) through the large majority of its mass. Due to there being no light, there are no plants producing oxygen, which primarily comes from ice that had melted long ago from the polar regions. The water along the seafloor of this zone is actually devoid of oxygen, resulting in a death trap for organisms unable to quickly return to the oxygen-enriched water above. This region also contains a much higher concentration of nutrient salts, like nitrogen, phosphorus, and silica, due to the large amount of dead organic material that drifts down from the above ocean zones and decomposes.</h2>
+      </div></div>
     </div>
 
 
@@ -77,40 +105,37 @@
 
 
 
-
-
-
-
-    <div class="section" id="section-3">
+    <div class="section" id="section-4">
       <div class="slide" data-anchor="slide1">
-        <div class="background-logo">
-          <img src="img/bio-1.jpg" alt="yolo" width="450px" >
-        </div>
+
+        <div class="background-logo">        <div class="deeper">
+          <img src="img/bio-1.jpg" alt="yolo" width="100%" >
+        </div> </div>
       </div>
       <div class="slide" data-anchor="slide2">
-        <div class="background-logo">
-          <img src="img/bio-2.jpg" alt="yolo" width="450px" >
-        </div>
+<div class="background-logo">        <div class="deeper">
+          <img src="img/bio-2.jpg" alt="yolo" width="100%" >
+        </div></div>
         </div>
         <div class="slide" data-anchor="slide3">
-          <div class="background-logo">
-            <img src="img/bio-3.jpg" alt="yolo" width="450px" >
-          </div>
+<div class="background-logo">        <div class="deeper">
+            <img src="img/bio-3.jpg" alt="yolo" width="100%" >
+          </div></div>
           </div>
           <div class="slide" data-anchor="slide4">
-            <div class="background-logo">
-              <img src="img/bio-4.jpg" alt="yolo" width="450px" >
-            </div>
+<div class="background-logo">        <div class="deeper">
+              <img src="img/bio-4.jpg" alt="yolo" width="100%" >
+            </div></div>
             </div>
             <div class="slide" data-anchor="slide5">
-              <div class="background-logo">
-                <img src="img/bio-5.jpg" alt="yolo" width="450px" >
-              </div>
+<div class="background-logo">        <div class="deeper">
+                <img src="img/bio-5.jpg" alt="yolo" width="100%" >
+              </div></div>
               </div>
               <div class="slide" data-anchor="slide6">
-                <div class="background-logo">
-                  <img src="img/bio-6.jpg" alt="yolo" width="450px" >
-                </div>
+<div class="background-logo">        <div class="deeper">
+                  <img src="img/bio-6.jpg" alt="yolo" width="100%" >
+                </div></div>
                 </div>
       </div>
 </div>
