--- a/index.html
+++ b/index.html
@@ -13,37 +13,6 @@
 <body>
 
 
-    <!-- a div is divisibe element  -->
-      <div class="button hamburger">
-        <img src="img/logogonew.png" alt="logogonew" width="170" height="170">
-
-      </div>
-
-
-
-      <div class="sidebar">
-
-        <div class="sidemenu-bits">
-            <h1>hello world!</h1><br><br>
-            <h2>This page created for study purposes by using fullpage.js </h2>
-            <h2>Special thanks to: <a href="www.jlambus.com">J. Lambus</a> for stunning photos.</h2>
-            <h2>Info: <a href="en.wikipedia.org">Wikipedia</a></h2><br><br><br>
-              <h3><a href="yagmursarcin.com">yagmursarcin.com</a></h3>
-        </div>
-<!-- <div class="icons">
-
- <div class="icon2">
-  <a href=""><i class="fab fa-facebook-f" width="50" height="50" ></i></a></div>
-
-             <div class="icon3">
-               <a href=""><i class="fab fa-instagram" width="50" height="50" ></i>
-                 <a/></div>
-</div> -->
-
-    </div>
-
-
-
     <div id="fullpage">
 
 
@@ -52,7 +21,9 @@
     <div class="section active" id="section-0">
       <div class="textbox">
         <h1>Deep Ocean</h1>
-        <p></p>
+        <div class="text"><h2>Discover some of the strangest creatures on the planet<br><br>Dive deep into the <i><b>darkside</b></i> of the Ocean</h2></div>
+
+
       </div>
     </div>
 
@@ -71,21 +42,25 @@
         <div class="slide" data-anchor="slide1">
           <div class="background-logo">        <div class="deeper">
             <img src="img/bat-1.jpg" alt="yolo" width="100%" >
+            <h2><b>Grimpoteuthis</b> is a genus of pelagic umbrella octopuses known as the dumbo octopuses.</h2>
           </div> </div>
         </div>
         <div class="slide" data-anchor="slide2">
           <div class="background-logo">        <div class="deeper">
               <img src="img/bat-2.jpg" alt="yolo" width="100%" >
+              <h2><b>Melanocetus johnsoni</b>, it is also one of the best-known creatures of the deep. It is one of about 200 species of anglerfish found throughout the world's oceans.</h2>
             </div> </div>
         </div>
         <div class="slide" data-anchor="slide3">
           <div class="background-logo">        <div class="deeper">
               <img src="img/bat-3.jpg" alt="yolo" width="100%" >
+              <h2>Vampire squid (a.k.a.) <b>Vampyroteuthis infernalis</b> is a small creature, growing to only about six inched in length.</h2>
             </div> </div>
         </div>
         <div class="slide" data-anchor="slide4">
           <div class="background-logo">        <div class="deeper">
               <img src="img/bat-4.jpg" alt="yolo" width="100%" >
+              <h2><b>Anoplogaster cornuta</b> (a.k.a.) fangtooth gets its name with the largest teeth of any fish in the ocean when taken in proportion to body size.</h2>
             </div> </div>
         </div>
     </div>
@@ -110,11 +85,13 @@
 
         <div class="background-logo">        <div class="deeper">
           <img src="img/bio-1.jpg" alt="yolo" width="100%" >
+          <h2> <b>Ancistrocheirus lesueurii</b> has transparent body is covered with polka dots of pigment-filled cells, and below its eyes are bioluminescent organs</h2>
         </div> </div>
       </div>
       <div class="slide" data-anchor="slide2">
 <div class="background-logo">        <div class="deeper">
           <img src="img/bio-2.jpg" alt="yolo" width="100%" >
+          <h2> <b>Polychaete Tomopteris</b> is one of the only marine creatures that makes yellow luminescence. When disturbed, a flurry of glowing sparks will erupt from the parapodia. </h2>
         </div></div>
         </div>
         <div class="slide" data-anchor="slide3">
@@ -125,16 +102,19 @@
           <div class="slide" data-anchor="slide4">
 <div class="background-logo">        <div class="deeper">
               <img src="img/bio-4.jpg" alt="yolo" width="100%" >
+              <h2><b>Aequorea Victoira</b> can have up too 150 tentacles but there all uneven. The tentacles are harmless to humans only for animals its dangerous. </h2>
             </div></div>
             </div>
             <div class="slide" data-anchor="slide5">
 <div class="background-logo">        <div class="deeper">
                 <img src="img/bio-5.jpg" alt="yolo" width="100%" >
+                <h2><b>Firefly Squid<b> the only cephalopods that can see in color, which allows them to distinguish between ambient light and their own bioluminescence. </h2>
               </div></div>
               </div>
               <div class="slide" data-anchor="slide6">
 <div class="background-logo">        <div class="deeper">
                   <img src="img/bio-6.jpg" alt="yolo" width="100%" >
+                  <h2><b>Janicella spinicauda</b> take part in one of the planet’s largest daily migrations —  every night, they rise from depths as great as 1,500 to feed and mate.</h2>
                 </div></div>
                 </div>
       </div>
