--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="section active" id="section-1">
       <div class="textbox">
         <h1>Bathypelagic</h1>
-        <div class="text"><h2>The bathyal zone or bathypelagic – from Greek βαθύς (bathýs), deep – (also known as midnight zone) is the part of the pelagic zone that extends from a depth of 1,000 to 4,000 m (3,300 to 13,100 ft) below the ocean surface. It lies between the mesopelagic above, and the abyssopelagic below.</h2></div>
+        <div class="text"><h2>The bathyal zone or bathypelagic – from Greek βαθύς (bathýs), deep – <b>(also known as midnight zone)</b><br> is the part of the pelagic zone that extends from a depth of 3,300 to 13,100 ft below the ocean surface. It lies between the mesopelagic above, and the abyssopelagic below.</h2></div>
       </div>
     </div>
 
@@ -70,8 +70,8 @@
 
     <div class="section active" id="section-3">
       <div class="textbox">
-        <h1>abyssopelagic</h1>
-        <div class="text"><h2>"Abyss" derives from the Greek word ἄβυσσος, meaning bottomless. At depths of 3,000 to 6,000 metres (9,800 to 19,700 ft), this zone remains in perpetual darkness. It alone makes up over 83% of the ocean and covers 60% of the Earth. The abyssal zone has temperatures around 2 to 3 °C (36 to 37 °F) through the large majority of its mass. Due to there being no light, there are no plants producing oxygen, which primarily comes from ice that had melted long ago from the polar regions. The water along the seafloor of this zone is actually devoid of oxygen, resulting in a death trap for organisms unable to quickly return to the oxygen-enriched water above. This region also contains a much higher concentration of nutrient salts, like nitrogen, phosphorus, and silica, due to the large amount of dead organic material that drifts down from the above ocean zones and decomposes.</h2>
+        <h1>Abyssopelagic</h1>
+        <div class="text"><h2>"Abyss" derives from the Greek word ἄβυσσος, meaning bottomless.<br> At depths of 9,800 to 19,700 ft, this zone remains in perpetual darkness.<br> <b>It alone makes up over 83% of the ocean and covers 60% of the Earth.</b><br> The water along the seafloor of this zone is actually devoid of oxygen, resulting in a death trap for organisms unable to quickly return to the oxygen-enriched water above. </h2>
       </div></div>
     </div>
 
@@ -94,11 +94,11 @@
           <h2> <b>Polychaete Tomopteris</b> is one of the only marine creatures that makes yellow luminescence. When disturbed, a flurry of glowing sparks will erupt from the parapodia. </h2>
         </div></div>
         </div>
-        <div class="slide" data-anchor="slide3">
+        <!-- <div class="slide" data-anchor="slide3">
 <div class="background-logo">        <div class="deeper">
             <img src="img/bio-3.jpg" alt="yolo" width="100%" >
           </div></div>
-          </div>
+          </div> -->
           <div class="slide" data-anchor="slide4">
 <div class="background-logo">        <div class="deeper">
               <img src="img/bio-4.jpg" alt="yolo" width="100%" >
@@ -108,7 +108,7 @@
             <div class="slide" data-anchor="slide5">
 <div class="background-logo">        <div class="deeper">
                 <img src="img/bio-5.jpg" alt="yolo" width="100%" >
-                <h2><b>Firefly Squid<b> the only cephalopods that can see in color, which allows them to distinguish between ambient light and their own bioluminescence. </h2>
+                <h2><b>Firefly Squid</b> the only cephalopods that can see in color, which allows them to distinguish between ambient light and their own bioluminescence. </h2>
               </div></div>
               </div>
               <div class="slide" data-anchor="slide6">
